--- a/B20_Ex02_1/B20_Ex02.csproj
+++ b/B20_Ex02_1/B20_Ex02.csproj
@@ -44,6 +44,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtificialIntelligence.cs" />
+    <Compile Include="eGameModes.cs" />
+    <Compile Include="ePlayerTypes.cs" />
+    <Compile Include="MemoryGame.cs" />
+    <Compile Include="GameGraphics.cs" />
+    <Compile Include="GameLogic.cs" />
+    <Compile Include="MainMenu.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
