fixed Ex02.ConsoleUtils reference

--- a/B20_Ex02_1/B20_Ex02.csproj
+++ b/B20_Ex02_1/B20_Ex02.csproj
@@ -39,11 +39,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Ex02.ConsoleUtils">
-      <HintPath>..\..\..\..\..\..\temp\Ex02.ConsoleUtils.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="eGameModes.cs" />
     <Compile Include="eGameStates.cs" />
     <Compile Include="ePlayerTypes.cs" />
@@ -55,6 +50,11 @@
     <Compile Include="Player.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Program.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Ex02.ConsoleUtils">
+      <HintPath>..\..\..\..\..\..\..\temp\Ex02.ConsoleUtils.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
